--- a/.gitignore
+++ b/.gitignore
@@ -47,7 +47,7 @@ SourceArt/**/*.tga
 
 # Binary Files
 Binaries/*
-Plugins/*/Binaries/*
+Plugins/**/Binaries/*
 
 # Builds
 Build/*
@@ -68,7 +68,11 @@ Saved/*
 
 # Compiled source files for the engine to use
 Intermediate/*
-Plugins/*/Intermediate/*
-
+Plugins/**/Intermediate/*
+Content/__ExternalActors__/**/*.uasset
+Content/__ExternalObjects__/**/*.uasset
+Content/Outer-Assets/**/*.uasset
+Content/Outer-Assets/**/*.fbx
+Content/**/*.uasset
 # Cache files for the editor to use
 DerivedDataCache/*
